docs(modules): add literate documentation for NixOS tailscale module
Introduce modules/configuration.org to document the custom tailscale module
with detailed rationale: why authKeyFile enables GitOps workflows,
why routing features allow subnet/exit node functionality, and why
configureResolver mitigates known DNS issues on desktop systems after suspend.

This establishes the pattern for future custom modules (darwin, home-manager)
and preserves the reasoning behind each configuration decision through
literate programming.

Update Makefile tangle target and main configuration.org to integrate
the new modules documentation.

--- a/configuration.org
+++ b/configuration.org
@@ -989,6 +989,9 @@ outputs =
 ** Overlays
 #+INCLUDE: "./overlays/configuration.org"
 
+** Modules
+#+INCLUDE: "./modules/configuration.org"
+
 ** Emacs
 *** early-init.org
 #+INCLUDE: "./applications/emacs/early-init.org"
